--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^11.18.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
